--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
-  }
+  },
+  "resolutions" :{
+    "nth-check":"2.0.1"
+   }
 }
