--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "firebase": "^9.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -49,7 +50,7 @@
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   },
-  "resolutions" :{
-    "nth-check":"2.0.1"
-   }
+  "resolutions": {
+    "nth-check": "2.0.1"
+  }
 }
